[tool.poetry]
name = "package-test"
version = "0.1.0"
description = ""
authors = ["Antoine Laborde <antoine.laborde@groupeseloger.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
